# MuFacialExpressionExtended

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
ExtraRE/B/: BSFaceGenBaseMorphExtraData.h
Shader/: GenerateShaderHeader.py  Morph.hlsl  Shader.h
Shader/Compiled/: Morph.cso
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
cmake/ports/commonlibsse-ng-flatrim/: portfile.cmake  vcpkg.json
cmake/ports/commonlibsse-ng-vr/: portfile.cmake  vcpkg.json
detours/lib.X64/: detours.lib  syelog.lib
include/: .clang-format  ActorManager.h  Command.h  Config.h  ConsoleLog.h  Hook.h  InputManager.h  InterfaceImpl.h  MorphDataBase.h  MorphManager.h  NiVector4.h  PCH.h  PapyrusScripts.h  Shader.h  Store.h  Utility.hpp  lString.h  nifUtil.h
include/Interface/: Interface.h  InterfaceImpl.h  OldInterface.h  OldInterfaceImpl.h
include/PrismaUI/: PrismaUI.cpp  PrismaUI.h  PrismaUI_API.h  index.html  script.js  style.css
src/: .clang-format  ActorManager.cpp  Command.cpp  Config.cpp  ConsoleLog.cpp  Hook.cpp  InputManager.cpp  Main.cpp  MorphDataBase.cpp  MorphManager.cpp  PapyrusScripts.cpp  Shader.cpp  Store.cpp  nifUtil.cpp
